import { snapshotTest } from 'testing';

describe('Tooltip demo snapshot', () => {
  snapshotTest('Tooltip');
});
