// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip demo snapshot Tooltip demo snapshot 0 1`] = `
<span
  onClick={[Function]}
>
  click显示
</span>
`;

exports[`Tooltip demo snapshot Tooltip demo snapshot 0 2`] = `
<span
  onClick={[Function]}
>
  onOpenChange 回调方法
</span>
`;
